Fix: Recent mentions opens 10px too low

--- a/src/components/popout/_recent_mentions.scss
+++ b/src/components/popout/_recent_mentions.scss
@@ -1,7 +1,7 @@
 .popout-3sVMXz{
     box-shadow: none;
 }
-div[class^="noArrow-"][class*="noShadow-"][class*="popout-"].popoutbottom-right{
+div[class^="noArrow-"][class*="noShadow-"][class*="popout-"].popoutBottomRight-2Rno5S{
     margin-top: 0;
 }
 
